USERS MENAGEMENT BACKEND LOGIC DONEZO WITH ERROR HANDELING AND PAGINATION AND SEARCH , EDIT , ADD  VIEW ETC ...